<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="2"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:contentDescription="@string/city"
        android:src="@drawable/city"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/image2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:contentDescription="@string/localfountain"
        android:src="@drawable/localfountain"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/image3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:contentDescription="@string/ruraltown"
        android:src="@drawable/ruraltown"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/image4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:contentDescription="@string/suburbia"
        android:src="@drawable/suburbia"
        android:scaleType="centerCrop"/>

</GridLayout>